# fir

./: .gitignore  CMakeLists.txt  README.md
include/fir/: fir.hpp  init.hpp  module.hpp  repository.hpp
src/: fir-cli.cpp  init.cpp
